Fix invisible onboarding text
Resolves #855

--- a/app/assets/stylesheets/modules/_onboarding.styl
+++ b/app/assets/stylesheets/modules/_onboarding.styl
@@ -116,6 +116,7 @@ body.onboarding
         color #2c2c2c
 
       .help-text
+        color #666666
         margin-top 6px
         font-size 13px
 
